--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^5.5.2",
     "next": "14.0.1",
     "phosphor-react": "^1.4.1",
     "react": "^18",
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "prisma": "^5.5.2",
     "typescript": "^5"
   }
 }
