--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@hookform/resolvers": "^3.3.2",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.0",
     "next": "14.0.1",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +22,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
