--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.5.2",
     "@tanstack/react-query": "^5.8.3",
+    "@vercel/og": "^0.5.20",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "googleapis": "^128.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
+    "next-seo": "^6.4.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
